test/classes/jplevyak/record_type_hierarchy-3-error.good
record_type_hierarchy-3-error.chpl:16: error: unresolved call 'f(C)'
record_type_hierarchy-3-error.chpl:10: note: this candidate did not match: f(a: D)
record_type_hierarchy-3-error.chpl:16: note: because actual argument #1 with type 'C'
record_type_hierarchy-3-error.chpl:10: note: is passed to formal 'a: D'
